# wangzhe_nongyao

./: .gitignore  CMakeLists.txt  README.md  game.c  game.cpp  game.hpp  hero.c  hero.cpp  hero.h  hero.hpp  images.qrc  main.c  main.cpp  ranking.c  ranking.cpp  ranking.h  ranking.hpp  ranking.txt  time_check.cpp  time_check.hpp  user.c  user.cpp  user.h  user.hpp  users.txt  使用说明.txt
.github/workflows/: android.yml  ios.yml  macos.yml  ubuntu.yml  windows-mingw.yml  windows.yml
src/: GameWindow.cpp  GameWindow.h  GameWindow.ui  LoginWindow.cpp  LoginWindow.h  LoginWindow.ui  PrepareWindow.cpp  PrepareWindow.h  PrepareWindow.ui  RankingWindow.cpp  RankingWindow.h  RankingWindow.ui  RegisterWindow.cpp  RegisterWindow.h  RegisterWindow.ui  main.cpp
src/core/: Game.cpp  Game.h  Hero.cpp  Hero.h  Login.cpp  Login.h  Ranking.cpp  Ranking.h  Register.cpp  Register.h
